Adiciona logo e ajusta layout das páginas

--- a/BigWaves/src/index.html
+++ b/BigWaves/src/index.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>BigWaves</title>
-  <link rel="stylesheet" href="/src/style.css" />
+  <link rel="stylesheet" href="/BigWaves/src/style.css" />
 </head>
 <body>
   <header>
-    <div class="logo"><img src="/src/Image/Nem fudendo.jpg" alt="logo"></div>
+    <div class="logo"><img src="/BigWaves/src/img/logo.png" alt="logo"></div>
     <h1>Casa do Microondas</h1>
   </header>
 
@@ -24,8 +24,8 @@
       <div class="marca">Panasonic</div>
     </div>
 
-    <button class="prev">&#10094;</button>
-    <button class="next">&#10095;</button>
+    <button class="prevMarcas">&#10094;</button>
+    <button class="nextMarcas">&#10095;</button>
   </section>  
 
 
@@ -34,43 +34,53 @@
   <section class="servicos">
     <h1>SERVICOS</h1>
         <div class="grid">
+        
+          <div class="item">
+        <div class="imagem-placeholder"></div>
+        <div class="descricao">
+          <p>Descricao do servico 1</p>
+        </div>
+        </div>
+
         <div class="item">
         <div class="imagem-placeholder"></div>
-        <p>Descricao do servico 1</p>
+        <div class="descricao">
+          <p>Descricao do servico 2</p>
         </div>
+        </div>
+
         <div class="item">
         <div class="imagem-placeholder"></div>
-        <p>Descricao do servico 2</p>
+          <div class="descricao">
+          <p>Descricao do servico 3</p>
         </div>
-        <div class="item">
-        <div class="imagem-placeholder"></div>
-        <p>Descricao do servico 3</p>
         </div>
+
         <div class="item">
         <div class="imagem-placeholder"></div> 
-        <p>Descricao do servico 4</p>
+        <div class="descricao">
+          <p>Descricao do servico 4</p>
         </div>
+        </div>
+
      </div>
   </section>
 
 
 
+  <section class="carrosselAvaliacoes">
 
-
-  <section class="avaliacoes">
-    <h1>AVALIAÇÕES</h1>
-    <div class="carrosselAvaliacoes">
-      <div class="box"></div>
-      <div class="box"></div>
-      <div class="box"></div>
-      <div class="box"></div>
-      <div class="box"></div>
-      <div class="box"></div>
-      <div class="box"></div>
-      <div class="box"></div>
+    <div class="avaliacoes">
+      <div class="avaliacao">gostei bastante</div>
+      <div class="avaliacao">nunca mais volto</div>
+      <div class="avaliacao">da pro gasto</div>
+      <div class="avaliacao">horrivel</div>
+      <div class="avaliacao">bom</div>
     </div>
-    </section>
 
+    <button class="prevAvaliacoes">&#10094;</button>
+    <button class="nextAvaliacoes">&#10095;</button>
+  </section>  
 
   <section class="contato">
     <div class="whatsapp">
@@ -98,10 +108,10 @@
 
   <footer>
     <p>LOCALIZACAO</p>
-    <div class="icone-localizacao"><img src="/src/Image/Nem fudendo.jpg" alt="logo"></div>
+    <div class="icone-localizacao"><img src="/BigWaves/src/img/logo.png" alt="logo"></div>
     <div class="info-extra">
     </div>
   </footer>
-  <script src="/src/function.js"></script>
+  <script src="/BigWaves/src/function.js"></script>
 </body>
 </html>
